update-manager (1:0.124.3) UNRELEASEDkarmic; urgency=low

  * UpdateManager/UpdateManager.py:
    - fix description display (LP: #379945), thanks
      to Richard Thomas

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Jul 2009 15:10:02 +0200

update-manager (1:0.124.2) karmic; urgency=low

  * UpdateManager/UpdateManager.py:
    - make it clearer if a package is a new install
      (as opposed to a upgrade) - thanks to Cody Sommerville
    - show amount of selected updates in the UI (LP: #330439)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Jul 2009 15:11:31 +0200

update-manager (1:0.124.1) karmic; urgency=low

  * fix ftbfs

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Jul 2009 08:08:42 +0200

update-manager (1:0.124) karmic; urgency=low

  * AutoUpgradeTester:
    - add kubuntu, main-all, lts-server, lts-ubuntu profiles
  * ported to gtkbuilder
  * UpdateManager/UpdateManager.py:
    - warn if running on battery (LP: #377697)
    - make it less stealty by setting the stick() property if
      run in auto-open mode (LP: #369820)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 06 Jul 2009 17:11:07 +0200

update-manager (1:0.123) karmic; urgency=low

  * debian/control:
    - build auto-upgrade-tester package to allow easy upgrade
      testing with a set of default profiles
  * UpdateManager/Core/MyCache.py:
    - wording fix (thanks to Ng)
  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - fix bug in dpkg_progress_log filea
  * AutoUpgradeTester/UpgradeTestBackend.py:
    - import the http_proxy from the environment
    - make the resultdir configrable and default to
      /var/cache/auto-upgrade-tester/result/
  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
    - make the path for the kvm working images configurable
      and default to /var/cache/auto-upgrade-tester
  * AutoUpgradeTester/auto-upgrade-tester:
    - move login() into the backends
  * AutoUpgradeTester/auto-upgrade-tester: