@@ -58,10 +58,18 @@ def run_apport():
     if "DISPLAY" in os.environ:
         for p in ["/usr/share/apport/apport-gtk", "/usr/share/apport/apport-qt"]:
             if os.path.exists(p):
-                ret = subprocess.call(p)
+                ret = -1
+                try:
+                    ret = subprocess.call(p)
+                except Exception, e:
+                    logging.exception("Unable to launch '%s' " % p)
                 return (ret == 0)
     elif os.path.exists("/usr/bin/apport-cli"):
-        return (subprocess.call("/usr/bin/apport-cli") == 0)
+        try:
+            return (subprocess.call("/usr/bin/apport-cli") == 0)
+        except Exception, e:
+            logging.exception("Unable to launch '/usr/bin/apport-cli'")
+            return False
     logging.debug("can't find apport")
     return False
 
