@@ -3,6 +3,9 @@ update-manager (1:0.124.3) UNRELEASEDkarmic; urgency=low
   * UpdateManager/UpdateManager.py:
     - fix description display (LP: #379945), thanks
       to Richard Thomas
+  * DistUpgrade/DistUpgradeApport.py:
+    - deal with errors from apport better (LP: #357339),
+      thanks to Patrick Horn)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Jul 2009 15:10:02 +0200
 
